--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">mobon_hybrid_SDK</string>
+    <string name="app_name">mobtuneSDK_Sample</string>
 </resources>
